--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,10 +73,12 @@ section {
     margin:2rem;
     padding:1rem;
     border-radius: 2%;
+    transition: .5s  ease;
 }
 .home_img img:hover {
     box-shadow: 0 0 1rem 0 var(--main-color); 
     border-radius: 50%;
+    transform: scale(1.02);
 }
 .home-content h3{
     font-size: 3.2rem;
@@ -144,10 +146,12 @@ span {
     width: 30vw;
     border-radius: 2.3%;
     padding:2rem;
+    transition:.4s ease-in-out;
 }
 .about_img img:hover {
     box-shadow: 0 0 1rem 0 var(--main-color); 
     border-radius: 50%;
+    transform: scale(1.02);
 }
 .heading {
     text-align: center;
@@ -163,4 +167,65 @@ span {
 .about_content p {
     font: 1.6rem;
     margin: 2rem 0 3rem;
+}
+
+/* Services Section */
+.services h2 {
+    margin-bottom:5rem;
+}
+.services_container {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:2rem;
+}
+.services_container .services_box {
+    flex:1 1 30rem;
+    background: var(--second-bg-color);
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+    transition: .5s ease;
+}
+.services_container .services_box:hover{
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+.services_box p {
+    font-size: 1.4rem;
+    margin: 1rem;
+}
+.services_box i {
+    font-size: 7rem;
+    color: var(--main-color);
+}
+.services_box h3{
+    font-size: 2.6rem;
+}
+
+/* Portfolio Style */
+.portfolio {
+    background: var(--second-bg-color);
+
+}
+.portfolio h2 {
+    margin-bottom: 4rem;
+}
+.portfolio_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 1fr);
+    align-items: center;
+    gap:2.4rem;
+}
+.portfolio_container .portfolio_box {
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
+}
+.portfolio_box img {
+    width: 100%;
 }
